--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 
         <body>
 
-            <h2>chess is my current idea
+            <h2>
+                Chess was Invented around the Sixth Century and was called "chaturanga" in it's earliest form. <br> <br>
+                Each piece moves in a unique way  
+                <ul>
+                    <li>The king may move in any direction once</li>
+                    <li>the queen moves any number of squares in any direction</li>
+                    <li>the bishop moves any number of squares diagonally (from one corner to the next)</li>
+                    <li>the knight is an odd one, going into an "L" shape two squares one way and a perpendcular way as well, (a ninety degree angle)</li>
+                    <li>the Rook can go any number of squares going left or right and upor down.</li>
+                    <li>Lastly the pawn, moving one square forward or two squares from the pieces starting position</li>
+                </ul> 
+                <p>The way you claim other pieces are simple: simply move to a square that is taken by an enemy piece and it will be "captured" which takes it off the board.</p>
             </h2>
 
         </body>
