i worked and need to work still

--- a/rules..html
+++ b/rules..html
@@ -9,8 +9,8 @@
 
 
         <body>
-            </h2>
-            Each piece moves in a unique way  
+            
+            <h3>Each piece moves in a unique way</h3>  
                 <ul>
                     <li>The king may move in any direction once</li>
                     <li>the queen moves any number of squares in any direction</li>
@@ -22,6 +22,9 @@
                 <p>The way you claim other pieces are simple: simply move to a square that is taken by an enemy piece and it will be "captured" which takes it off the board.
                     In order to win the game you need to captue your opponents King Piece which can be done directly or by checkmate.
                 </p>
+            </h2>
+            <h2>
+                <a href="index.html">go back here.</a>
             </h2>
         </body>
     </html>
