--- a/history.html
+++ b/history.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
     <html>
         <head>
+            <link rel="stylesheet" href="style.css">
 
         </head>
 
 
-        <body>
-            
+        <body background-color=:>
+            <h2>The History of chaturanga</h2>
+
+            <p>
+              <a href="https://en.wikipedia.org/wiki/History_of_chess">Source Is the wiki</a>  Chess dates back fifteen hundred years! In it's original form it was known as chaturanga. Chaturanga was developed from India at first and moved all over the world, gaining popularity and developing to make chess!                                             
+            </p>
         </body>
-    </html>
+      </html>
